# mirage_ui

./: LICENSE.txt  README.md  gitignore.txt  pre-commit-config.yaml  pyproject.toml
configs/: llama32_standard_prompt.yaml  phi4_standard_prompt.yaml  qwen_standard_prompt.yaml
examples_of_inputs/: 1_qwen06.json  2_qwen06.json
old/: test_model_download.py
src/mirage_ui/: mirage_app.py
templates/: template.html
