[project]
name = "mirage-ui"
version = "0.1.0"
description = "Web interface for MIRAGE interpretability tool visualization"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "nltk>=3.8",
    "numpy>=1.24.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "sentencepiece>=0.1.99",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "datasets>=2.14.0",
    "huggingface-hub>=0.23.0",
    "bitsandbytes>=0.42.0",
    "inseq[transformers] @ git+https://github.com/inseq-team/inseq.git",
]

[project.optional-dependencies]
cuda118 = [
    "torch>=2.0.0",
    "torchvision",
    "torchaudio",
]

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"

[tool.poetry.group.commit.dependencies]
pre-commit = "^4.0.1"

[tool.poetry.group.lint.dependencies]
mypy = "^1.13.0"
ruff = "^0.9.3"

[tool.ruff]
# max line length
line-length = 119

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "D", # pydocstyle,
    "I", # isorte,
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "F402", "F823"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"